force-app/main/default/objects/Property_Vendor__c/Property_Vendor__c.object-meta.xml
<CustomObject>
    <label>Property Vendor</label>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>Property Vendor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>