force-app/main/default/objects/Property_Vendor__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Contact</label>
    <type>Checkbox</type>
</CustomField>