force-app/main/default/objects/Property_Vendor__c/fields/Expired_Contract__c.field-meta.xml
<CustomField>
    <fullName>Expired_Contract__c</fullName>
    <description>Indicates whether or not the contract with the vendor has expired.</description>
    <formula>NOT (AND(
  TODAY() &gt;= Contract_Start_Date__c,
  TODAY() &lt;= Contract_End_Date__c
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether or not the contract with the vendor has expired.</inlineHelpText>
    <label>Expired Contract</label>
    <type>Checkbox</type>
</CustomField>