force-app/main/default/objects/Property_Vendor__c/fields/Preferred_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Vendor</label>
    <type>Checkbox</type>
</CustomField>