force-app/main/default/objects/Property_Vendor__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>The name of the related property.</description>
    <formula>Property__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the related property.</inlineHelpText>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>