force-app/main/default/objects/Property_Vendor__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Vendors</relationshipLabel>
    <relationshipName>Property_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>