force-app/main/default/objects/Property_Vendor__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>The name of the related Account record.</description>
    <formula>Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the related Account record.</inlineHelpText>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>