force-app/main/default/objects/Property_Vendor__c/listViews/All_Property_Vendors.listView-meta.xml
<ListView>
    <fullName>All_Property_Vendors</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Property__c</columns>
    <columns>Preferred_Vendor__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Emergency_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Property Vendors</label>
</ListView>